fixed overflow-x

--- a/wp-content/themes/humescores/sass/layout/_global.scss
+++ b/wp-content/themes/humescores/sass/layout/_global.scss
@@ -1,3 +1,6 @@
+* {
+    outline: 1px solid red;
+}
 .site-content{
     padding:1em;
     @media screen and (min-width: $query__small){
@@ -10,6 +13,9 @@
 }
 .widget-area{
     font-size:.8rem;
+}
+.content-area{
+        max-width: $size__max-width;
 }
 
 @media screen and (min-width: $query__med){
