--- a/wp-content/themes/humescores/sass/site/primary/_posts-and-pages.scss
+++ b/wp-content/themes/humescores/sass/site/primary/_posts-and-pages.scss
@@ -82,6 +82,7 @@
 .entry-content,
 .entry-summary {
     margin: 1.5em 0 0;
+    max-width:100%;
 }
 
 .page-links {
